added response for master_v2

--- a/main.html
+++ b/main.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello what are you doing?</h1>
     <h1>Im good what do you think!</h1>
+    <h1>this is for the master v2 branch</h1>
 </body>
 </html>
